# preseal

./: .env.example  .gitignore  AGENTS.md  LICENSE  METHODOLOGY.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
attacks/: README.md  exfiltration.yaml  injection.yaml  omission.yaml  tool_abuse.yaml  tool_injection.yaml
examples/: README.md  github-workflow.yml  vulnerable_agent.py
src/preseal/: README.md  __init__.py  _demo_agents.py  audit.py  baseline.py  cli.py  compare.py  demo.py  detect.py  environment.py  models.py  observer.py  oracle.py  scanner.py  scorer.py
src/preseal/adapters/: __init__.py
src/preseal/attacks/: __init__.py  loader.py
src/preseal/attacks/builtin/: exfiltration.yaml  exfiltration_advanced.yaml  injection_encoding.yaml  injection_social.yaml  multi_turn.yaml  omission_advanced.yaml  scope_advanced.yaml  scope_violation.yaml  tool_abuse_advanced.yaml  tool_injection_advanced.yaml
tests/: README.md  test_audit.py  test_comprehensive.py  test_dvla_real.py  test_e2e_full.py  test_langgraph_real.py  test_live_attack_strength.py  test_live_comprehensive.py  test_live_edge_demo.py  test_live_llm.py  test_real_agent_scenarios.py  test_real_world.py  test_real_world_scenarios.py  test_scanner.py
